[project]
name = "xing"
version = "1.0.0"
description = "An easy-to-use web framework."
authors = [{ name = "abersheeran", email = "me@abersheeran.com" }]
dependencies = [
    "baize<0.19.0,>=0.18.2",
    "pydantic<2.0,>=1.8",
    "typing-extensions>=3.10.0",
]
requires-python = ">=3.7,<4.0"
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
homepage = "https://github.com/abersheeran/xing"
repository = "https://github.com/abersheeran/xing"
documentation = "https://xing.abersheeran.com/"

[project.optional-dependencies]
cli = ["click<9.0,>=8.0"]

[project.scripts]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=5.0.4",
    "black>=23.1.0",
    "isort>=5.11.5",
    "mypy @ git+https://github.com/python/mypy.git",
]
test = [
    "async-asgi-testclient<2.0.0,>=1.4.11",
    "pytest<8.0.0,>=7.2.1",
    "pytest-asyncio<1.0,>=0.20.3",
    "pytest-cov<5.0.0,>=4.0.0",
]
docs = [
    "mkdocs[i18n]==1.2.4",
    "mkdocs-static-i18n==0.46",
    "mkdocs-material==7.1.0",
]

[tool.pdm.build]
includes = ["xing"]

[tool.isort]
profile = "black"

[tool.coverage.run]
omit = ["*/.venv/*", "*/tests/*", "xing/status.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "return NotImplemented",
    "if False:",
    "assert False",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
    "pass",
]
show_missing = true
skip_covered = true

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
