[project]
name = "kui"
version = "1.2.2"
description = "An easy-to-use web framework."
authors = [{ name = "abersheeran", email = "me@abersheeran.com" }]
dependencies = [
    "baize<0.21.0,>=0.20.0",
    "pydantic<2.0,>=1.8",
    "typing-extensions>=4.2.0",
]
requires-python = ">=3.7,<4.0"
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
homepage = "https://github.com/abersheeran/kui"
repository = "https://github.com/abersheeran/kui"
documentation = "https://kui.aber.sh"

[project.optional-dependencies]
cli = ["click<9.0,>=8.0"]

[project.scripts]

[tool.pdm]
[tool.pdm.scripts]
lint-isort = "isort {args}"
lint-black = "black {args}"
lint = { composite = [
    "lint-isort",
    "lint-black",
    "check-flake8",
    "check-mypy",
] }
check-isort = "isort --check --diff {args}"
check-black = "black --check --diff {args}"
check-flake8 = "flake8 --ignore W503,E203,E501,E731 {args}"
check-mypy = "mypy {args}"
check = { composite = [
    "check-isort",
    "check-black",
    "check-flake8",
    "check-mypy",
] }
test = "pytest {args}"

[tool.pdm.dev-dependencies]
dev = [
    "flake8>=5.0.4",
    "black>=23.1.0",
    "isort>=5.11.5",
    "mypy>=1.0.0",
]
test = [
    "async-asgi-testclient<2.0.0,>=1.4.11",
    "pytest<8.0.0,>=7.2.1",
    "pytest-asyncio<1.0,>=0.20.3",
    "pytest-cov<5.0.0,>=4.0.0",
    "httpx>=0.23.3",
]

[tool.pdm.build]
includes = ["kui"]

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.coverage.run]
omit = ["*/.venv/*", "*/tests/*", "kui/status.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "return NotImplemented",
    "if False:",
    "assert False",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
    "pass",
]
show_missing = true
skip_covered = true

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
