[project]
name = "kui"
version = "1.5.3"
description = "An easy-to-use web framework."
authors = [{ name = "abersheeran", email = "me@abersheeran.com" }]
dependencies = [
    "baize<0.21.0,>=0.20.0",
    "pydantic>=2.0",
    "typing-extensions>=4.2.0",
]
requires-python = ">=3.7,<4.0"
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
homepage = "https://github.com/abersheeran/kui"
repository = "https://github.com/abersheeran/kui"
documentation = "https://kui.aber.sh"

[tool.pdm]
[tool.pdm.scripts]
format = "ruff format {args}"
lint-ruff = "ruff --fix {args}"
lint = { composite = [
    "lint-ruff kui tests",
    "format kui tests",
    "check",
] }
check-ruff = "ruff check {args}"
check-mypy = "mypy {args}"
check = { composite = [
    "check-ruff kui tests",
    "check-mypy kui tests",
] }
test = "pytest {args}"

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.0.0",
    "ruff>=0.0.270",
]
test = [
    "async-asgi-testclient>=1.4.11",
    "pytest>=7.2.1",
    "pytest-asyncio>=0.20.3",
    "pytest-cov>=4.0.0",
    "httpx>=0.23.3",
]

[tool.pdm.build]
includes = ["kui"]

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.ruff]
ignore = [
    "E501",
    "E731",
]

[tool.coverage.run]
omit = ["*/.venv/*", "*/tests/*", "kui/status.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "return NotImplemented",
    "if False:",
    "assert False",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
    "pass",
    "\\.\\.\\.",
]
show_missing = true
skip_covered = true

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
